--- a/KIP_SAFE/dasboard-kip-safe.html
+++ b/KIP_SAFE/dasboard-kip-safe.html
@@ -38,31 +38,40 @@
         </div>
 
         <!-- Tabel Penggunaan Obat Berdasarkan Merk -->
-        <div class="bg-white shadow-md rounded-lg p-6">
+   <section class="bg-white shadow-md rounded-lg p-6">
             <h2 class="text-xl font-semibold mb-4">Penggunaan Obat</h2>
             <table class="min-w-full bg-white">
                 <thead>
-                    <tr class="w-full bg-gray-200 border-b-2 border-gray-300">
+                    <tr class="bg-gray-200 border-b-2 border-gray-300">
                         <th class="py-2 px-4 text-left">No</th>
                         <th class="py-2 px-4 text-left">Nama Obat</th>
                         <th class="py-2 px-4 text-left">Jumlah Penggunaan</th>
-                    </tr>
-                    <tr>
-                        <td class="py-2 px-4 text-left">1</td>
-                        <td class="py-2 px-4 text-left">coba</td>
-                        <td class="py-2 px-4 text-left">10</td>
-                    </tr>
-                    <tr>
-                        <td class="py-2 px-4 text-left">1</td>
-                        <td class="py-2 px-4 text-left">coba</td>
-                        <td class="py-2 px-4 text-left">10</td>
+                        <th class="py-2 px-4 text-left">Aksi</th>
                     </tr>
                 </thead>
-                <tbody id="medicationUsageTable"></tbody>
+                <tbody id="medicationUsageTable">
+                    <tr>
+                        <td class="py-2 px-4 text-left">1</td>
+                        <td class="py-2 px-4 text-left">Coba</td>
+                        <td class="py-2 px-4 text-left">10</td>
+                        <td class="py-2 px-4 text-left">
+                            <a href="hal_edit.php" class="text-blue-500 hover:underline">Edit</a>
+                            <button class="text-red-500 hover:underline" onclick="confirmDelete(1)">Hapus</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="py-2 px-4 text-left">2</td>
+                        <td class="py-2 px-4 text-left">Coba 2</td>
+                        <td class="py-2 px-4 text-left">5</td>
+                        <td class="py-2 px-4 text-left">
+                            <button class="text-blue-500 hover:underline" onclick="editMedication(2)">Edit</button>
+                            <button class="text-red-500 hover:underline" onclick="confirmDelete(2)">Hapus</button>
+                        </td>
+                    </tr>
+                    <!-- Tambahkan baris tambahan sesuai kebutuhan -->
+                </tbody>
             </table>
-        </div>
-
-    </div>
+        </section>
 
     <script>
         // Ambil data kondisi alat dari backend
