--- a/KIP_SAFE/dasboard-kip-safe.html
+++ b/KIP_SAFE/dasboard-kip-safe.html
@@ -64,7 +64,7 @@
                         <td class="py-2 px-4 text-left">Coba 2</td>
                         <td class="py-2 px-4 text-left">5</td>
                         <td class="py-2 px-4 text-left">
-                            <button class="text-blue-500 hover:underline" onclick="editMedication(2)">Edit</button>
+                            <a href="hal_edit.php" class="text-blue-500 hover:underline">Edit</a>
                             <button class="text-red-500 hover:underline" onclick="confirmDelete(2)">Hapus</button>
                         </td>
                     </tr>
