--- a/KIP_SAFE/hal_kondisi_tidak_baik.html
+++ b/KIP_SAFE/hal_kondisi_tidak_baik.html
@@ -16,44 +16,90 @@
         <table class="min-w-full">
             <thead class="bg-gray-800 text-white">
                 <tr>
+                    <th class="w-1/2 text-left py-3 px-4 uppercase font-semibold text-sm">Nama Responden</th>
+                    <th class="w-1/2 text-left py-3 px-4 uppercase font-semibold text-sm">Tanggal</th>
                     <th class="w-1/2 text-left py-3 px-4 uppercase font-semibold text-sm">Nama Alat</th>
                     <th class="w-1/4 text-left py-3 px-4 uppercase font-semibold text-sm">Kondisi</th>
+                    <th class="w-1/4 text-left py-3 px-4 uppercase font-semibold text-sm">Catatan</th>
+                    <th class="w-1/4 text-left py-3 px-4 uppercase font-semibold text-sm">Aksi</th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-2 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">LAMPU SENTER</td>
                     <td class="text-left py-3 px-4 text-red-500"> Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Lampu Tidak Hidup</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
                 
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-3 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">LAMPU TINDAKAN</td>
                     <td class="text-left py-3 px-4 text-red-500">Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Lampu Tidak Hidup</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
 
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-3 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">MINOR SET</td>
                     <td class="text-left py-3 px-4 text-red-500">Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Tidak Ada</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
 
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-3 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">MEJA INSTRUMEN</td>
                     <td class="text-left py-3 px-4 text-red-500">Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Tidak Ada</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
 
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-3 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">TIANG INFUS</td>
                     <td class="text-left py-3 px-4 text-red-500">Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Tidak Ada</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
 
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-3 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">OKSIGEN KECIL</td>
                     <td class="text-left py-3 px-4 text-red-500">Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Tidak Ada</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
 
                 <tr class="bg-gray-200">
+                    <td class="w-1/2 text-left py-3 px-4">Putri</td>
+                    <td class="w-1/2 text-left py-3 px-4">10/8/2024</td>
                     <td class="w-1/2 text-left py-3 px-4">COLLAR NECK UKURAN SEDANG</td>
                     <td class="text-left py-3 px-4 text-red-500">Tidak Baik</td>
+                    <td class="w-1/2 text-left py-3 px-4">Tidak Ada</td>
+                    <td class="text-left py-3 px-4">
+                        <button class="bg-green-500 text-white py-1 px-3 rounded">Perbaiki</button>
+                    </td>
                 </tr>
             </tbody>
         </table>
