--- a/KIP_SAFE/dasboard-kip-safe.html
+++ b/KIP_SAFE/dasboard-kip-safe.html
@@ -15,8 +15,11 @@
         <h1 class="text-2xl font-bold mb-6">Dashboard Klinik KBS</h1>
 
         <!-- Kondisi Alat -->
-        <section class="bg-white shadow-md rounded-lg p-6 mb-6">
-            <h2 class="text-xl font-semibold mb-4">Kondisi Alat</h2>
+         <section class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-xl font-semibold mb-2">Kondisi Alat</h2>
+            <td class="text-left py-3 px-4">
+                <button class="bg-blue-500 text-white py-1 px-3 rounded mb-2 text-center"><a href="insert_alat.html">Tambah Kondisi Data Alat</a></button>
+            </td>
             <div id="equipmentStatus" aria-live="polite"></div>
             <div class="flex gap-4">
                 <a href="hal_kondisi_baik.html" class="flex-1 p-4  border border-green-400 text-center rounded-lg shadow hover:bg-green-200 transition">
