--- a/KIP_SAFE/hal_kondisi_baik.html
+++ b/KIP_SAFE/hal_kondisi_baik.html
@@ -129,7 +129,7 @@
 </div>
 
 <td class="text-left py-3 px-4">
-    <button class="bg-red-500 text-white py-1 px-3 rounded mt-12 text-center"><a href="dasboard-kip-safe.html">Kembali ke Dashboard</a></button>
+    <button class="bg-red-500 text-white py-1 px-3 rounded mt-12 text-center"><a href="index.php">Kembali ke Home</a></button>
 </td>
 
 <script>
