--- a/KIP_SAFE/hal_kondisi_tidak_baik.html
+++ b/KIP_SAFE/hal_kondisi_tidak_baik.html
@@ -8,10 +8,13 @@
 </head>
 <body class="bg-gray-100 p-5">
 
-<div class="w-full mt-12">
+<div class="w-full mt-5 ">
     <p class="text-xl pb-3 flex items-center">
         <i class="fas fa-list mr-3"></i> Tabel Kondisi Alat
     </p>
+    <td class="text-left py-3 px-4">
+        <button class="bg-red-500 text-white py-1 px-3 rounded mt-5 text-center"><a href="index.php">Kembali ke Home</a></button>
+    </td>
     <div class="bg-white overflow-auto shadow-md rounded-lg">
         <table class="min-w-full">
             <thead class="bg-gray-800 text-white">
