--- a/KIP_SAFE/hal_kondisi_baik.html
+++ b/KIP_SAFE/hal_kondisi_baik.html
@@ -8,14 +8,16 @@
 </head>
 <body class="bg-gray-100 p-5">
 
+    <td class="text-left py-3 px-4">
+        <button class="bg-red-500 text-white py-1 px-3 rounded text-center"><a href="dasboard-kip-safe.html">Kembali ke Dashboard</a></button>
+    </td>
+
 <div class="w-full mt-12">
     <p class="text-xl pb-3 flex items-center">
         <i class="fas fa-list mr-3"></i> Tabel Kondisi Alat
     </p>
-    <td class="text-left py-3 px-4">
-        <button class="bg-red-500 text-white py-1 px-3 rounded mt-12 text-center"><a href="index.php">Kembali ke Home</a></button>
-    </td>
-    <div class="bg-white overflow-auto shadow-md rounded-lg">
+    
+    <div class="bg-white overflow-auto shadow-md rounded-lg mt-8">
         <table class="min-w-full">
             <thead class="bg-gray-800 text-white">
                 <tr>
@@ -132,7 +134,7 @@
 </div>
 
 <td class="text-left py-3 px-4">
-    <button class="bg-red-500 text-white py-1 px-3 rounded mt-12 text-center"><a href="index.php">Kembali ke Home</a></button>
+    <button class="bg-red-500 text-white py-1 px-3 rounded mt-12 text-center"><a href="dasboard-kip-safe.html">Kembali ke Dashboard</a></button>
 </td>
 
 <script>
